--- a/hugo.yaml
+++ b/hugo.yaml
@@ -41,11 +41,14 @@ params:
   dateformat: "2 January, 2006"
   favicon: "apple-touch-icon.png"
   feedlinks: true
+  frontposts: 3
   icon: "apple-touch-icon.png"
   image: "apple-touch-icon.png"
   imageMaxWidth: 400
   logoWidth: 340
   logoPath: "images/logo.svg"
+  mainSections:
+    - blog
   menuinheader: true
   mobileMenu: true
   mobileMenuOutline: true
@@ -58,6 +61,9 @@ menu:
     - Name: "Hem"
       weight: -10
       pageRef: "/"
+    - Name: "Blog"
+      weight: -9
+      pageRef: "blog"
     - Name: "Kyrkan"
       weight: -8
       pageRef: "kyrkan/"
