--- a/hugo.yaml
+++ b/hugo.yaml
@@ -20,6 +20,10 @@ markup:
     renderer:
       unsafe: true
 
+outputs:
+  home: ["HTML","RSS", "JSON"]
+  section: ["HTML","RSS", "JSON"]
+
 params:
   contact: "info@socialdemokraternakrokom.se"
   copyright: "© 2025 Socialdemokraterna i Krokom"
